--- a/sarahcoyne/src/index.html
+++ b/sarahcoyne/src/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="assets/css/nav.css">  
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Sarahcoyne</title>
+  <title>Sarah's Homepage</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
