--- a/sarahcoyne/src/index.html
+++ b/sarahcoyne/src/index.html
@@ -9,6 +9,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.png">
+  <meta name="google-site-verification" content="YB0ab-PmliaxC-Zd7oAxyyJSRAsBF-903VDlOvG9Ww0" />
 </head>
 <body>
   <app-root></app-root>
